--- a/Exercise04_TA.ipynb
+++ b/Exercise04_TA.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,22 +48,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ucs(graph, home, destination):\n",
     "    \"\"\"\n",
-    "    Perform Uniform Cost Search on a graph from a start location (home) to a goal location (destination).\n",
+    "    Perform Uniform Cost Search on a graph from a start location (home) to a goal location (guest).\n",
     "\n",
     "    Parameters:\n",
     "    graph (dict): A dictionary representation of the graph where keys are location names and values\n",
     "                  are dictionaries of neighbors with their associated costs.\n",
     "    home (str): The starting location in the graph.\n",
-    "    destination (str): The goal location to reach in the graph.\n",
+    "    guest (str): The goal location to reach in the graph.\n",
     "\n",
     "    Returns:\n",
-    "    tuple: result(tuple) : A tuple containing the total cost (int) and path as a list of locations (str) from 'home' to 'destination'.\n",
+    "    tuple: A tuple containing the total cost and path as a list of locations from 'home' to 'guest'.\n",
     "    \"\"\"\n",
     "    if home not in graph:\n",
     "        raise TypeError(str(home) + ' not found in graph!')\n",
@@ -74,17 +74,28 @@
     "    queue.put((0, [home]))\n",
     "    \n",
     "    while not queue.empty():\n",
+    "        node = queue.get()\n",
+    "        \n",
+    "        visited = node[1]\n",
+    "        current = node[1][len(node[1]) - 1]\n",
+    "        if destination in node[1]:\n",
+    "            return node\n",
+    "        cost = node[0]\n",
+    "        for neighbor in graph[current]:\n",
+    "            if neighbor in visited:\n",
+    "                continue\n",
+    "            temp = node[1][:]\n",
+    "            temp.append(neighbor)\n",
+    "            queue.put((cost + graph[current][neighbor], temp))\n",
     "            ##################### Write your answer here ##################\n",
     "    \n",
+    "\n",
     "            ###############################################################\n",
     "        # Your task: Complete the implementation here.\n",
-    "        # - Check if the current location is the goal (destination).\n",
-    "        # - Iterate over the neighbors of the current location.\n",
-    "        # - For each neighbor, calculate the total cost from the start location.\n",
-    "        # - Add the neighbor to the priority queue if it hasn't been visited\n",
-    "        \n",
-    "    # If the goal is not reachable, return None\n",
-    "    return None"
+    "        # - Check if the current node is the goal (guest).\n",
+    "        # - Iterate over the neighbors of the current node.\n",
+    "        # - For each neighbor, calculate the total cost from the start node.\n",
+    "        # - Add the neighbor to the priority queue if it hasn't been visited."
    ]
   },
   {
@@ -97,9 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shortest path: Anyang -> Zhengzhou -> Nanchang -> Shenzhen -> HongKong with total cost: 1450\n"
+     ]
+    }
+   ],
    "source": [
     "file = open(\"maps.txt\",\"r\")\n",
     "lines = file.readlines()\n",
@@ -112,7 +131,7 @@
     "        graph[node][token[i]] = int(token[i + 1])\n",
     "result=ucs(graph, \"Anyang\", \"HongKong\")\n",
     "if result:\n",
-    "    path, cost = result\n",
+    "    cost, path= result\n",
     "    formatted_path = \" -> \".join(path)  # Formats the path as 'A -> B -> C'\n",
     "    print(f\"Shortest path: {formatted_path} with total cost: {cost}\")\n",
     "else:\n",
@@ -121,8 +140,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
