--- a/Exercise04.ipynb
+++ b/Exercise04.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,8 +72,25 @@
     "\n",
     "    queue = PriorityQueue()\n",
     "    queue.put((0, [home]))\n",
+    "    visited = set()\n",
     "    \n",
     "    while not queue.empty():\n",
+    "        cost, path = queue.get()\n",
+    "        current_location = path[-1]\n",
+    "\n",
+    "        if current_location == destination:\n",
+    "            return path, cost  # Goal reached, return the cost and path\n",
+    "\n",
+    "        if current_location in visited:\n",
+    "            continue  # Skip if the node has been visited\n",
+    "\n",
+    "        visited.add(current_location)\n",
+    "\n",
+    "        for neighbor, neighbor_cost in graph[current_location].items():\n",
+    "            if neighbor not in visited:\n",
+    "                total_cost = cost + neighbor_cost\n",
+    "                queue.put((total_cost, path + [neighbor]))\n",
+    "\n",
     "            ##################### Write your answer here ##################\n",
     "    \n",
     "            ###############################################################\n",
@@ -97,9 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shortest path: Anyang -> Zhengzhou -> Nanchang -> Shenzhen -> HongKong with total cost: 1450\n"
+     ]
+    }
+   ],
    "source": [
     "file = open(\"maps.txt\",\"r\")\n",
     "lines = file.readlines()\n",
@@ -111,20 +136,35 @@
     "    for i in range(1, len(token)-1, 2):\n",
     "        graph[node][token[i]] = int(token[i + 1])\n",
     "result=ucs(graph, \"Anyang\", \"HongKong\")\n",
+    "\n",
     "if result:\n",
     "    path, cost = result\n",
     "    formatted_path = \" -> \".join(path)  # Formats the path as 'A -> B -> C'\n",
     "    print(f\"Shortest path: {formatted_path} with total cost: {cost}\")\n",
     "else:\n",
-    "    print(\"Path not found\")"
+    "    print(\"Path not found\")\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
